--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,36 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@android:color/white"
     android:padding="@dimen/padding_value">
 
     <TextView
         android:id="@+id/title"
         style="@style/title_text_style"
-        android:background="@color/title_color_background"/>
+        android:padding="@dimen/padding_value" />
 
     <LinearLayout
         android:id="@+id/h_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:padding="@dimen/padding_value"
         app:layout_constraintTop_toBottomOf="@id/title">
 
         <TextView
             android:id="@+id/section"
             style="@style/details_text_style"
-            android:background="@color/section_color_background"/>
+            android:gravity="bottom" />
 
         <TextView
             android:id="@+id/author"
             style="@style/details_text_style"
-            android:background="@color/author_color_background"/>
+            android:gravity="center" />
 
         <TextView
             android:id="@+id/date"
             style="@style/details_text_style"
-            android:background="@color/date_color_background"/>
+            android:gravity="right" />
     </LinearLayout>
 
 
