--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#b8eef9</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="title_color_background">#b8eef9</color>
-    <color name="section_color_background">#91e2d9</color>
-    <color name="author_color_background">#91e2d9</color>
-    <color name="date_color_background">#91e2d9</color>
+    <color name="title_color_background">#303F9F</color>
+    <color name="section_color_background">#3F51B5</color>
+    <color name="author_color_background">#3F51B5</color>
+    <color name="date_color_background">#3F51B5</color>
+
+    <color name="app_background">#b8eef9</color>
 </resources>
