--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -12,7 +12,6 @@
         android:padding="@dimen/padding_value" />
 
     <LinearLayout
-        android:id="@+id/h_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -32,7 +31,7 @@
         <TextView
             android:id="@+id/date"
             style="@style/details_text_style"
-            android:gravity="right" />
+            android:gravity="end" />
     </LinearLayout>
 
 
