--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,9 +2,10 @@
 <resources>
 
     <dimen name="padding_value">5dp</dimen>
-    <dimen name="text_size">16sp</dimen>
+    <dimen name="text_size">20sp</dimen>
     <dimen name="title_text_size">20sp</dimen>
     <dimen name="details_text_size">12sp</dimen>
 
+    <dimen name="no_article_image_height_width">150dp</dimen>
 
 </resources>
