- begin to refactor the code   - use retrofit to call APIs   - organize the code   - remove old classes - add some resources   - add velino fonts   - update strings, dimens and colors   - add some drawables   - add some layouts - update copyrights

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,15 +18,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MainActivity">
+    tools:context=".views.main.MainActivity">
 
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:divider="@null"
-        android:dividerHeight="@dimen/padding_value"
-        android:padding="@dimen/padding_value">
+        android:dividerHeight="@dimen/space8"
+        android:padding="@dimen/space8">
     </ListView>
 
     <ImageView
@@ -44,7 +44,7 @@
 
 
     <ProgressBar
-        android:id="@+id/indicator"
+        android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"/>
