--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,11 +15,20 @@
    -->
 <resources>
 
-    <dimen name="padding_value">5dp</dimen>
+    <dimen name="space0_1">0.1dp</dimen>
+    <dimen name="space1">1dp</dimen>
+    <dimen name="space2">2dp</dimen>
+    <dimen name="space4">4dp</dimen>
+    <dimen name="space8">8dp</dimen>
+    <dimen name="space12">12dp</dimen>
+    <dimen name="space16">16dp</dimen>
+    <dimen name="space32">32dp</dimen>
+    <dimen name="space64">64dp</dimen>
     <dimen name="text_size">20sp</dimen>
     <dimen name="title_text_size">20sp</dimen>
     <dimen name="details_text_size">14sp</dimen>
 
     <dimen name="no_article_image_height_width">150dp</dimen>
+    <dimen name="no_data_text_size">16sp</dimen>
 
 </resources>
