- add BasesActivities - add SearchActivity

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -13,12 +13,19 @@
    See the License for the specific language governing permissions and
    limitations under the License.
    -->
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".views.main.MainActivity">
+
+    <SearchView
+        android:id="@+id/search_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:iconifiedByDefault="false"
+        android:queryHint="Search"
+        android:layout_alignParentTop="true" />
 
     <ListView
         android:id="@+id/list_view"
@@ -26,8 +33,8 @@
         android:layout_height="wrap_content"
         android:divider="@null"
         android:dividerHeight="@dimen/space8"
-        android:padding="@dimen/space8">
-    </ListView>
+        android:padding="@dimen/space8"
+        android:layout_below="@id/search_view"></ListView>
 
     <include
         layout="@layout/progress_bar_no_data_tv_layout"
