--- a/app/src/main/res/layout/progress_bar_no_data_tv_layout.xml
+++ b/app/src/main/res/layout/progress_bar_no_data_tv_layout.xml
@@ -17,21 +17,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <!--<ImageView-->
-    <!--android:id="@+id/loading_indicator"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:background="@android:color/transparent"-->
-    <!--app:srcCompat="@drawable/progress_animated"-->
-    <!--android:visibility="invisible"-->
-    <!--android:layout_centerInParent="true"-->
-    <!--tools:visibility="visible"-->
-    <!--tools:ignore="ContentDescription" />-->
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/progress_bar"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -42,18 +32,38 @@
         android:visibility="gone"
         tools:visibility="visible" />
 
-    <TextView
-        android:id="@+id/no_items_tv"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:background="@color/background_app"
-        android:gravity="center"
-        android:text="@string/no_items_msg"
-        android:textColor="@color/dark_gray"
-        android:textSize="@dimen/no_data_text_size"
-        android:visibility="gone"
-        tools:visibility="visible" />
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/msg_iv"
+            android:layout_width="@dimen/msg_image_height_width"
+            android:layout_height="@dimen/msg_image_height_width"
+            android:src="@drawable/icons8_disconnected"
+            android:visibility="gone"
+            tools:visibility="visible"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintVertical_bias=".33"
+            android:contentDescription="@string/no_connection" />
+
+        <TextView
+            android:id="@+id/msg_tv"
+            style="@style/text_style"
+            android:text="@string/no_items_msg"
+            android:textColor="@color/dark_gray"
+            android:textSize="@dimen/no_data_text_size"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:layout_marginTop="@dimen/space16"
+            app:layout_constraintTop_toBottomOf="@id/msg_iv"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
 
