--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,7 +28,7 @@
     <dimen name="title_text_size">20sp</dimen>
     <dimen name="details_text_size">14sp</dimen>
 
-    <dimen name="no_article_image_height_width">150dp</dimen>
+    <dimen name="msg_image_height_width">150dp</dimen>
     <dimen name="no_data_text_size">16sp</dimen>
 
 </resources>
