--- a/app/src/main/res/layout/settings_layout.xml
+++ b/app/src/main/res/layout/settings_layout.xml
@@ -13,12 +13,12 @@
    See the License for the specific language governing permissions and
    limitations under the License.
    -->
-<fragment android:name="com.example.tarek.news.views.SettingsActivity$ArticlePreferenceFragment"
+<fragment android:name="com.example.tarek.news.views.settings.SettingsActivity$ArticlePreferenceFragment"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/TODO"
-    tools:context="com.example.tarek.news.views.SettingsActivity">
+    tools:context="com.example.tarek.news.views.settings.SettingsActivity">
 
 </fragment>
