--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,6 +29,9 @@
     <dimen name="details_text_size">14sp</dimen>
 
     <dimen name="msg_image_height_width">150dp</dimen>
-    <dimen name="no_data_text_size">16sp</dimen>
+    <dimen name="icons_size">24dp</dimen>
+    <dimen name="medium_icons_size">16dp</dimen>
 
+    <dimen name="no_data_text_size">16sp</dimen>
+    <dimen name="spinner_item_size">16sp</dimen>
 </resources>
