--- a/app/src/main/res/layout/activity_section.xml
+++ b/app/src/main/res/layout/activity_section.xml
@@ -18,7 +18,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.main.MainActivity">
+    tools:activity=".views.main.MainActivity">
 
     <FrameLayout
         android:id="@+id/fragment_articles_container"
