--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.tarek.news.views.webViewActivity.WebViewActivity">
+    tools:activity="com.example.tarek.news.views.webViewActivity.WebViewActivity">
 
     <WebView
         android:id="@+id/webView"
