--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,9 +30,11 @@
     <dimen name="icons_size">24dp</dimen>
     <dimen name="medium_icons_size">16dp</dimen>
 
+    <dimen name="radius_scale">4dp</dimen>
+
     <dimen name="no_data_text_size">16sp</dimen>
     <dimen name="list_item_size">20sp</dimen>
     <dimen name="text_size">16sp</dimen>
-    <dimen name="title_text_size">20sp</dimen>
+    <dimen name="title_text_size">18sp</dimen>
     <dimen name="details_text_size">14sp</dimen>
 </resources>
