- moved the call api logic to the fragment

--- a/app/src/main/res/layout/fragment_articles.xml
+++ b/app/src/main/res/layout/fragment_articles.xml
@@ -27,4 +27,7 @@
         android:divider="@null"
         android:dividerHeight="@dimen/space8"/>
 
+    <include
+        layout="@layout/progress_bar_no_data_tv_layout"
+        tools:visibility="gone" />
 </RelativeLayout>
