--- a/app/src/main/res/layout/fragment_sections.xml
+++ b/app/src/main/res/layout/fragment_sections.xml
@@ -20,9 +20,17 @@
     android:layout_height="match_parent"
     tools:activity=".views.main.MainActivity">
 
-    <FrameLayout
-        android:id="@+id/fragment_sections_container"
+    <ListView
+        android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        android:divider="@null"
+        android:dividerHeight="@dimen/space8"
+        android:padding="@dimen/space8">
+    </ListView>
+
+    <include
+        layout="@layout/progress_bar_no_data_tv_layout"
+        tools:visibility="gone" />
 
 </RelativeLayout>
