--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -17,7 +17,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/space8"
     xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.constraint.ConstraintLayout
@@ -54,7 +53,7 @@
                 android:id="@+id/section"
                 style="@style/details_text_style"
                 android:gravity="start|center"
-                android:padding="@dimen/space8"/>
+                android:paddingTop="@dimen/space4"/>
 
             <TextView
                 android:id="@+id/author"
