--- a/app/src/main/res/layout/fragment_articles.xml
+++ b/app/src/main/res/layout/fragment_articles.xml
@@ -20,12 +20,11 @@
     android:layout_height="match_parent"
     tools:activity=".views.main.MainActivity">
 
-    <ListView
-        android:id="@+id/list_view"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/articles_recycler_view"
+        android:layout_margin="@dimen/space2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:divider="@null"
-        android:dividerHeight="@dimen/space8"/>
+        android:layout_height="wrap_content"/>
 
     <include
         layout="@layout/progress_bar_no_data_tv_layout"
