- use SettingsActivity to save user's preferred choices in SharedPreferences   - to call the API to get sections if it was null in SP   - to use ordering keys - update PageSize to 20 item / page

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -33,6 +33,6 @@
 
     <item
         android:id="@+id/item_settings"
-        android:title="@string/settings_activity_label"
+        android:title="@string/settings_label"
         app:showAsAction="never" />
 </menu>
