--- a/app/src/main/res/layout/settings_layout.xml
+++ b/app/src/main/res/layout/settings_layout.xml
@@ -18,7 +18,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/TODO"
-    tools:activity="com.example.tarek.news.views.settings.SettingsActivity">
-
-</fragment>
+    android:id="@+id/settings_fragment"
+    tools:activity="com.example.tarek.news.views.settings.SettingsActivity"/>
