--- a/app/src/main/res/drawable-mdpi/default_btn_background.xml
+++ b/app/src/main/res/drawable-mdpi/default_btn_background.xml
@@ -17,7 +17,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/background_btn" />
+            <solid android:color="@color/background_app" />
             <corners android:radius="@dimen/radius_scale" />
         </shape>
     </item>
