--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
    See the License for the specific language governing permissions and
    limitations under the License.
    -->
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -75,11 +75,12 @@
         <item name="android:textAppearance">@android:style/TextAppearance.Holo.Medium</item>
     </style>
 
-    <style name="list_item_style" parent="medium_text_style">
+    <style name="section_item_style" parent="medium_text_style">
         <item name="android:textSize">@dimen/list_item_size</item>
         <item name="android:gravity">start</item>
         <item name="android:layout_margin">@dimen/space8</item>
-        <item name="android:padding">@dimen/space16</item>
+        <item name="android:padding">@dimen/space4</item>
+        <item name="android:background">@drawable/item_selector</item>
     </style>
 
     <style name="small_text_style" parent="text_style">
@@ -94,5 +95,34 @@
         <item name="android:textSize">@dimen/list_item_size</item>
     </style>
 
+    <style name="spinner_tv_style" parent="medium_text_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_margin">@dimen/space4</item>
+        <item name="android:padding">@dimen/space8</item>
+        <!--<item name="android:textAllCaps">true</item>-->
+        <item name="android:textColor">@color/black</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+    <style name="spinner_style" parent="@android:style/Widget.Holo.Light.Spinner">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAlignment" tools:targetApi="jelly_bean_mr1">viewStart</item>
+        <item name="android:spinnerMode">dropdown</item>
+        <item name="android:overlapAnchor" tools:targetApi="lollipop">true</item>
+    </style>
+
+    <style name="spinner_with_label_TV_style" parent="spinner_style">
+        <item name="android:layout_width">wrap_content</item>
+        <!--<item name="android:dropDownWidth">230dp</item>-->
+        <!--dropDownWidth should be less than @dimen/filter_width (if set to match parent will case errors) -->
+        <item name="android:dropDownVerticalOffset">20dp</item>
+        <!--dropDownVerticalOffset to be down the spinner with xdp space -->
+        <!--<item name="android:showDividers">none</item>-->
+        <!--<item name="android:dividerHeight">0dp</item>-->
+        <!--<item name="android:scrollbarAlwaysDrawVerticalTrack">true</item>-->
+        <!--<item name="android:dropDownSelector">@android:color/white</item>-->
+    </style>
 
 </resources>
