--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -14,6 +14,7 @@
    limitations under the License.
    -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -23,7 +24,10 @@
         android:layout_height="wrap_content"
         android:iconifiedByDefault="false"
         android:queryHint="Search"
-        android:layout_alignParentTop="true" />
+        android:focusable="false"
+        android:focusedByDefault="false"
+        android:layout_alignParentTop="true"
+        tools:targetApi="o" />
 
     <ListView
         android:id="@+id/search_history_list_view"
