--- a/app/src/main/res/values/countries.xml
+++ b/app/src/main/res/values/countries.xml
@@ -13,7 +13,6 @@
         <item>Antigua and Barbuda</item>
         <item>Argentina</item>
         <item>Armenia</item>
-        <item>Aruba</item>
         <item>Australia</item>
         <item>Austria</item>
         <item>Azerbaijan</item>
@@ -31,7 +30,6 @@
         <item>Botswana</item>
         <item>Bouvet Island</item>
         <item>Brazil</item>
-        <item>British Indian Ocean Territory</item>
         <item>British Virgin Islands</item>
         <item>Brunei</item>
         <item>Bulgaria</item>
@@ -41,28 +39,24 @@
         <item>Cameroon</item>
         <item>Canada</item>
         <item>Cape Verde</item>
-        <item>Cayman Islands</item>
         <item>Central African Republic</item>
         <item>Chad</item>
         <item>Chile</item>
         <item>China</item>
         <item>Christmas Island</item>
-        <item>Cocos (Keeling) Islands</item>
         <item>Colombia</item>
         <item>Comoros</item>
         <item>Congo</item>
         <item>Cook Islands</item>
+        <item>Congo</item>
         <item>Costa Rica</item>
         <item>Cote d\'Ivoire</item>
         <item>Croatia</item>
         <item>Cuba</item>
         <item>Cyprus</item>
         <item>Czech Republic</item>
-        <item>Democratic Republic of the Congo</item>
         <item>Denmark</item>
         <item>Djibouti</item>
-        <item>Dominica</item>
-        <item>Dominican Republic</item>
         <item>East Timor</item>
         <item>Ecuador</item>
         <item>Egypt</item>
@@ -75,11 +69,9 @@
         <item>Falkland Islands</item>
         <item>Fiji</item>
         <item>Finland</item>
-        <item>Former Yugoslav Republic of Macedonia</item>
         <item>France</item>
         <item>French Guiana</item>
         <item>French Polynesia</item>
-        <item>French Southern Territories</item>
         <item>Gabon</item>
         <item>Georgia</item>
         <item>Germany</item>
@@ -95,7 +87,6 @@
         <item>Guinea-Bissau</item>
         <item>Guyana</item>
         <item>Haiti</item>
-        <item>Heard Island and McDonald Islands</item>
         <item>Honduras</item>
         <item>Hong Kong</item>
         <item>Hungary</item>
@@ -131,11 +122,6 @@
         <item>Maldives</item>
         <item>Mali</item>
         <item>Malta</item>
-        <item>Marshall Islands</item>
-        <item>Martinique</item>
-        <item>Mauritania</item>
-        <item>Mauritius</item>
-        <item>Mayotte</item>
         <item>Mexico</item>
         <item>Micronesia</item>
         <item>Moldova</item>
@@ -178,12 +164,8 @@
         <item>Romania</item>
         <item>Russia</item>
         <item>Rwanda</item>
-        <item>Sqo Tome and Principe</item>
         <item>Saint Helena</item>
-        <item>Saint Kitts and Nevis</item>
         <item>Saint Lucia</item>
-        <item>Saint Pierre and Miquelon</item>
-        <item>Saint Vincent and the Grenadines</item>
         <item>Samoa</item>
         <item>San Marino</item>
         <item>Saudi Arabia</item>
@@ -197,14 +179,12 @@
         <item>Solomon Islands</item>
         <item>Somalia</item>
         <item>South Africa</item>
-        <item>South Georgia and the South Sandwich Islands</item>
         <item>South Korea</item>
         <item>South Sudan</item>
         <item>Spain</item>
         <item>Sri Lanka</item>
         <item>Sudan</item>
         <item>Suriname</item>
-        <item>Svalbard and Jan Mayen</item>
         <item>Swaziland</item>
         <item>Sweden</item>
         <item>Switzerland</item>
@@ -222,7 +202,6 @@
         <item>Tunisia</item>
         <item>Turkey</item>
         <item>Turkmenistan</item>
-        <item>Turks and Caicos Islands</item>
         <item>Tuvalu</item>
         <item>Virgin Islands</item>
         <item>Uganda</item>
@@ -230,15 +209,12 @@
         <item>United Arab Emirates</item>
         <item>United Kingdom</item>
         <item>United States</item>
-        <item>United States Minor Outlying Islands</item>
         <item>Uruguay</item>
         <item>Uzbekistan</item>
         <item>Vanuatu</item>
         <item>Vatican City</item>
         <item>Venezuela</item>
         <item>Vietnam</item>
-        <item>Wallis and Futuna</item>
-        <item>Western Sahara</item>
         <item>Yemen</item>
         <item>Yugoslavia</item>
         <item>Zambia</item>
