- to check if the data loaded before so don't reload it again onResume (after return back to the activity/fragment)

--- a/app/src/main/res/values/countries.xml
+++ b/app/src/main/res/values/countries.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- used as country labels and convert it to lower case and replace all spaces to dash (-) to be used as countries ids, should not be translated -->
     <string-array name="countries_array">
         <item>Afghanistan</item>
         <item>Albania</item>
