- fix an issue in last commit - update some values related to UI - change app icon and some other icons

--- a/app/src/main/res/layout/action_bar_title_layout.xml
+++ b/app/src/main/res/layout/action_bar_title_layout.xml
@@ -25,9 +25,9 @@
 <!-- to custom title bar Text view in Action bar -->
     <TextView
         android:id="@+id/action_bar_title"
-        style="@style/medium_text_style"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
         android:textColor="@color/white"
         android:gravity="start"
         android:ellipsize="end"
