--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -40,7 +40,7 @@
 
         <TextView
             android:id="@+id/article_title"
-            style="@style/title_text_style"
+            style="@style/article_title_text_style"
             tools:text="@string/app_name"
             app:layout_constraintBottom_toBottomOf="@id/article_image"
             app:layout_constraintStart_toStartOf="@id/article_image"
