--- a/app/src/main/res/layout/progress_bar_no_data_tv_layout.xml
+++ b/app/src/main/res/layout/progress_bar_no_data_tv_layout.xml
@@ -32,7 +32,7 @@
             android:id="@+id/msg_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icons8_disconnected"
+            tools:src="@android:drawable/stat_notify_sync"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +45,6 @@
             style="@style/text_style"
             android:text="@string/no_items_msg"
             android:textColor="@color/dark_gray"
-            android:textSize="@dimen/no_data_text_size"
             android:layout_marginTop="@dimen/space16"
             app:layout_constraintTop_toBottomOf="@id/msg_iv"
             app:layout_constraintStart_toStartOf="parent"
