--- a/app/src/main/res/layout/item_search_history_list.xml
+++ b/app/src/main/res/layout/item_search_history_list.xml
@@ -37,9 +37,9 @@
         style="@style/medium_text_style"
         android:layout_width="0dp"
         tools:text="@string/app_name"
-        android:layout_marginTop="@dimen/space2"
         android:layout_marginStart="@dimen/space8"
         android:layout_marginLeft="@dimen/space8"
+        android:padding="@dimen/space8"
         android:gravity="center_vertical"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/history_icon"
