--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -13,26 +13,24 @@
    See the License for the specific language governing permissions and
    limitations under the License.
    -->
-<menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/item_search"
         android:title="@string/search_label"
-        android:icon="@android:drawable/ic_menu_search"
-        app:showAsAction="always"
-        tools:ignore="AlwaysShowAction" />
+        android:icon="@android:drawable/ic_search_category_default"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/item_sections"
         android:title="@string/sections_label"
-        android:icon="@drawable/icons8_news_480"
-        app:showAsAction="always"
-        tools:ignore="AlwaysShowAction" />
+        android:icon="@drawable/ic_news_list"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/item_settings"
         android:title="@string/settings_label"
+        android:icon="@android:drawable/ic_menu_manage"
         app:showAsAction="never" />
 </menu>
