--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,29 +28,27 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:textSize">@dimen/details_text_size</item>
         <item name="android:textStyle">normal</item>
         <item name="android:maxLines">2</item>
         <item name="android:ellipsize">end</item>
     </style>
 
-    <style name="title_text_style" parent="medium_text_style">
+    <style name="article_title_text_style" parent="large_text_style">
         <item name="android:background">@drawable/gradient_background</item>
         <item name="android:gravity">start</item>
         <item name="android:padding">@dimen/space2</item>
         <item name="android:layout_margin">@dimen/space2</item>
-        <item name="android:textSize">@dimen/title_text_size</item>
         <item name="android:maxLines">2</item>
         <item name="android:ellipsize">end</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="text_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
-        <!--<item name="android:textStyle">bold</item>-->
         <item name="android:textColor">@color/text_color</item>
-        <item name="android:textSize">@dimen/text_size</item>
+        <item name="android:textAppearance">@android:style/TextAppearance.Holo.Medium</item>
         <item name="android:layout_margin">@dimen/space4</item>
         <item name="android:padding">@dimen/space4</item>
     </style>
@@ -68,7 +66,7 @@
     </style>
 
     <style name="large_text_style" parent="text_style">
-        <item name="android:textAppearance">@android:style/TextAppearance.Holo.Widget.ActionBar.Title</item>
+        <item name="android:textAppearance">@android:style/TextAppearance.Holo.Large</item>
     </style>
 
     <style name="medium_text_style" parent="text_style">
@@ -76,10 +74,9 @@
     </style>
 
     <style name="section_item_style" parent="medium_text_style">
-        <item name="android:textSize">@dimen/list_item_size</item>
         <item name="android:gravity">start</item>
         <item name="android:layout_margin">@dimen/space8</item>
-        <item name="android:padding">@dimen/space4</item>
+        <item name="android:padding">@dimen/space8</item>
         <item name="android:background">@drawable/item_selector</item>
     </style>
 
@@ -92,17 +89,8 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textAppearance">@android:style/TextAppearance.Holo.Medium</item>
-        <item name="android:textSize">@dimen/list_item_size</item>
-    </style>
-
-    <style name="spinner_tv_style" parent="medium_text_style">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_margin">@dimen/space4</item>
-        <item name="android:padding">@dimen/space8</item>
-        <!--<item name="android:textAllCaps">true</item>-->
-        <item name="android:textColor">@color/black</item>
-        <item name="android:ellipsize">end</item>
-        <item name="android:maxLines">1</item>
+        <item name="android:paddingTop">@dimen/space8</item>
+        <item name="android:paddingBottom">@dimen/space8</item>
     </style>
 
     <style name="spinner_style" parent="@android:style/Widget.Holo.Light.Spinner">
@@ -116,13 +104,13 @@
     <style name="spinner_with_label_TV_style" parent="spinner_style">
         <item name="android:layout_width">wrap_content</item>
         <!--<item name="android:dropDownWidth">230dp</item>-->
-        <!--dropDownWidth should be less than @dimen/filter_width (if set to match parent will case errors) -->
-        <item name="android:dropDownVerticalOffset">20dp</item>
+        <!--dropDownWidth (if set to match parent will case errors) -->
+        <item name="android:dropDownVerticalOffset">70dp</item>
         <!--dropDownVerticalOffset to be down the spinner with xdp space -->
-        <!--<item name="android:showDividers">none</item>-->
-        <!--<item name="android:dividerHeight">0dp</item>-->
-        <!--<item name="android:scrollbarAlwaysDrawVerticalTrack">true</item>-->
-        <!--<item name="android:dropDownSelector">@android:color/white</item>-->
+        <item name="android:showDividers">none</item>
+        <item name="android:dividerHeight">0dp</item>
+        <item name="android:scrollbarAlwaysDrawVerticalTrack">true</item>
+        <item name="android:dropDownSelector">@color/white</item>
     </style>
 
 </resources>
