--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -20,5 +20,5 @@
 <fragment android:id="@+id/web_view_fragment_id"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:name="com.example.tarek.news.views.webViewActivity.WebViewFragment"
+    android:name="com.gmail.tarekmabdallah91.news.views.webViewActivity.WebViewFragment"
     xmlns:android="http://schemas.android.com/apk/res/android" />
