--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -29,12 +29,14 @@
 
     <string-array name="order_date_list_labels">
         <item>@string/published_label</item>
+        <item>@string/first_publication_label</item>
         <item>@string/newspaper_edition_label</item>
         <item>@string/last_modified_label</item>
     </string-array>
 
     <string-array name="order_date_list_values">
         <item>@string/published_value</item>
+        <item>@string/first_publication_value</item>
         <item>@string/newspaper_edition_value</item>
         <item>@string/last_modified_value</item>
     </string-array>
